// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton snapshots test renders logged in user status 1`] = `
<div
  className="auth-button-wrapper"
>
  <IconButton
    className="log-out-button"
    disableTouchRipple={false}
    disabled={false}
    iconStyle={Object {}}
    onClick={[Function]}
    tooltip="Log out"
    tooltipPosition="bottom-left"
    touch={false}
  >
    <SocialPerson />
  </IconButton>
</div>
`;

exports[`AuthButton snapshots test renders logged out status 1`] = `
<div
  className="auth-button-wrapper"
>
  <IconButton
    className="log-in-button"
    disableTouchRipple={false}
    disabled={false}
    iconStyle={Object {}}
    onClick={[Function]}
    tooltip="Log in"
    tooltipPosition="bottom-left"
    touch={false}
  >
    <SocialPersonOutline />
  </IconButton>
</div>
`;
